Add rename popup for extract to local var code action